--- a/05.1-svm.Rmd
+++ b/05.1-svm.Rmd
@@ -53,6 +53,8 @@
   par(mfrow=c(1,1))
 ```
 
+# (PART) Machine Learning Algorithms {-}
+
 # Support Vector Machines
 
 Support Vector Machine (SVM) is one of the most popular classification models. The original SVM was proposed by Vladimir Vapnik and Alexey Chervonenkis in 1963. Then two important improvements was developed in the 90's: the soft margin version [@cortes1995support] and the nonlinear SVM using the kernel trick [@boser1992training]. We will start with the hard margin version, and then introduce all other techniques. 
