--- a/05.4-boosting.Rmd
+++ b/05.4-boosting.Rmd
@@ -1,4 +1,8 @@
-\def\cD{\cal{D}}
+\def\cD{{\cal D}}
+\def\cL{{\cal L}}
+\def\cX{{\cal X}}
+\def\cF{{\cal F}}
+\def\cH{{\cal H}}
 \def\bA{\mathbf{A}}
 \def\bB{\mathbf{B}}
 \def\bX{\mathbf{X}}
@@ -8,6 +12,8 @@
 \def\bD{\mathbf{D}}
 \def\bV{\mathbf{V}}
 \def\bS{\mathbf{S}}
+\def\bW{\mathbf{W}}
+\def\bK{\mathbf{K}}
 \def\bx{\mathbf{x}}
 \def\by{\mathbf{y}}
 \def\bs{\mathbf{s}}
@@ -16,8 +22,13 @@
 \def\be{\mathbf{e}}
 \def\bv{\mathbf{v}}
 \def\bp{\mathbf{p}}
+\def\bw{\mathbf{w}}
+\def\bz{\mathbf{z}}
 \def\bzero{\mathbf{0}}
+\def\balpha{\boldsymbol \alpha}
 \def\bbeta{\boldsymbol \beta}
+\def\btheta{\boldsymbol \theta}
+\def\bxi{\boldsymbol \xi}
 \def\bmu{\boldsymbol \mu}
 \def\bepsilon{\boldsymbol \epsilon}
 \def\T{\text{T}}
@@ -26,6 +37,7 @@
 \def\Var{\text{Var}}
 \def\E{\text{E}}
 \def\pr{\text{pr}}
+\def\Prob{\text{P}}
 \DeclareMathOperator*{\argmin}{arg\,min}
 \DeclareMathOperator*{\argmax}{arg\,max}
 
@@ -38,6 +50,7 @@
 ```{r include = FALSE}
   par(bg="transparent")
   par(mar=c(2,2,2,2))
+  par(mfrow=c(1,1))
 ```
 
-# Spline
+# Boosting
