--- a/book.bib
+++ b/book.bib
@@ -205,3 +205,50 @@
   year={1970},
   publisher={JSTOR}
 }
+
+@book{breiman1984classification,
+  title={Classification and regression trees},
+  author={Breiman, Leo and Friedman, Jerome H and Olshen, Richard A and Stone, Charles J},
+  year={1984},
+  publisher={Monterey, CA: Wadsworth & Brooks/Cole Advanced Books & Software}
+}
+
+@book{quinlan1993c4,
+  title={C4. 5: programs for machine learning},
+  author={Quinlan, J Ross},
+  year={1993},
+  publisher={Elsevier}
+}
+
+@article{breiman1996bagging,
+  title={Bagging predictors},
+  author={Breiman, Leo},
+  journal={Machine learning},
+  volume={24},
+  number={2},
+  pages={123--140},
+  year={1996},
+  publisher={Springer}
+}
+
+@article{breiman2001random,
+  title={Random forests},
+  author={Breiman, Leo},
+  journal={Machine learning},
+  volume={45},
+  number={1},
+  pages={5--32},
+  year={2001},
+  publisher={Springer}
+}
+
+@article{ho1998random,
+  title={The random subspace method for constructing decision forests},
+  author={Ho, Tin Kam},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={20},
+  number={8},
+  pages={832--844},
+  year={1998},
+  publisher={IEEE}
+}
