--- a/02.2-ridge.Rmd
+++ b/02.2-ridge.Rmd
@@ -101,7 +101,27 @@ The variance of both $\beta_1$ and $\beta_2$ are quite large. This is expected b
   points(betahat[1], betahat[2], pch = 19, col = "blue", cex = 2)
 ```
 
-As an alternative, if we add a ridge regression penalty, the contour is forced to be more convex due to the added eigenvalues. Here is a plot of the Ridge $\ell_2$ penalty.
+Over many simulation runs, the solution lies around the line of $\beta_1 + \beta_2 = 2$.
+
+```{r}
+  # the truth
+  plot(NA, NA, xlim = c(-1, 3), ylim = c(-1, 3))
+  points(1, 1, pch = 19, col = "red", cex = 2)
+  
+  # generate many datasets in a simulation 
+  for (i in 1:200)
+  {
+    X = mvrnorm(n, c(0, 0), matrix(c(1,0.99, 0.99, 1), 2,2))
+    y = rnorm(n, mean = X[,1] + X[,2])
+    
+    betahat <- solve(t(X) %*% X) %*% t(X) %*% y
+    points(betahat[1], betahat[2], pch = 19, col = "blue", cex = 0.5)
+  }
+```
+
+## Ridge Penalty and the Reduced Variation
+
+If we add a ridge regression penalty, the contour is forced to be more convex due to the added eigenvalues on $\bX^\bX$, making the eignvalues of $(\bX^\bX)^{-1}$ smaller. Here is a plot of the Ridge $\ell_2$ penalty.
 
 ```{r echo = FALSE}
   pen <- matrix(apply(allbeta, 1, function(b) 3*b %*% b),
@@ -141,6 +161,63 @@ Hence, by adding this to the OLS objective function, the solution is more stable
     points(bh[1], bh[2], pch = 19, col = "blue", cex = 2)
     box()
 ```
+
+We can check the ridge solution over many simulation runs 
+
+```{r fig.dim=c(6, 6), out.width = '45%'}
+  par(mfrow=c(1, 1))
+
+  # the truth
+  plot(NA, NA, xlim = c(-1, 3), ylim = c(-1, 3))
+  points(1, 1, pch = 19, col = "red", cex = 2)
+  
+  # generate many datasets in a simulation 
+  for (i in 1:200)
+  {
+    X = mvrnorm(n, c(0, 0), matrix(c(1,0.99, 0.99, 1), 2,2))
+    y = rnorm(n, mean = X[,1] + X[,2])
+    
+    # betahat <- solve(t(X) %*% X + 2*diag(2)) %*% t(X) %*% y
+    betahat <- lm.ridge(y ~ X - 1, lambda = 2)$coef
+    points(betahat[1], betahat[2], pch = 19, col = "blue", cex = 0.5)
+  }
+```
+
+This effect is gradually changing as we increase the penalty level. The following simulation shows how the variation of $\bbeta$ changes. We show this with two penalty values, and see how the estimated parameters are away from the truth. 
+
+```{r out.width = "80%", fig.dim=c(12, 6)}
+  par(mfrow = c(1, 2))
+
+  # small penalty
+  plot(NA, NA, xlim = c(-1, 3), ylim = c(-1, 3))
+  points(1, 1, pch = 19, col = "red", cex = 2)
+  
+  # generate many datasets in a simulation 
+  for (i in 1:200)
+  {
+    X = mvrnorm(n, c(0, 0), matrix(c(1,0.99, 0.99, 1), 2,2))
+    y = rnorm(n, mean = X[,1] + X[,2])
+    
+    betahat <- lm.ridge(y ~ X - 1, lambda = 2)$coef
+    points(betahat[1], betahat[2], pch = 19, col = "blue", cex = 0.5)
+  }
+  
+  # large penalty
+  plot(NA, NA, xlim = c(-1, 3), ylim = c(-1, 3))
+  points(1, 1, pch = 19, col = "red", cex = 2) 
+  
+  # generate many datasets in a simulation 
+  for (i in 1:200)
+  {
+    X = mvrnorm(n, c(0, 0), matrix(c(1,0.99, 0.99, 1), 2,2))
+    y = rnorm(n, mean = X[,1] + X[,2])
+    
+    # betahat <- solve(t(X) %*% X + 30*diag(2)) %*% t(X) %*% y
+    betahat <- lm.ridge(y ~ X - 1, lambda = 30)$coef
+    points(betahat[1], betahat[2], pch = 19, col = "blue", cex = 0.5)
+  }
+```
+
 
 ## Bias and Variance of Ridge Regression
 
